[package]
name = "tdn-verifier"
authors = ["TDN Team"]
description = "A library for the TrustedDataNet verifier"
keywords = ["tls", "mpc", "2pc"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.5-tdn-0.1.0-alpha.1"
edition = "2021"

[features]
tracing = ["dep:tracing", "tlsn-tls-mpc/tracing", "tlsn-common/tracing"]

[dependencies]
tlsn-core.workspace = true
tlsn-common.workspace = true
tlsn-tls-core.workspace = true
tlsn-tls-mpc.workspace = true
tdn-core.workspace = true
uid-mux.workspace = true

tlsn-utils-aio.workspace = true

mpz-core.workspace = true
mpz-garble.workspace = true
mpz-ot.workspace = true
mpz-share-conversion.workspace = true
mpz-circuits.workspace = true

futures.workspace = true
futures-timer.workspace = true
thiserror.workspace = true
derive_builder.workspace = true
rand.workspace = true
signature.workspace = true
opaque-debug.workspace = true

tracing = { workspace = true, optional = true }

base64.workspace = true
blake3.workspace = true
p256.workspace = true
serde_json.workspace = true
tokio.workspace = true
